<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddBookActivity"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/outline_image_24"
        android:contentDescription="@string/book_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:layout_marginHorizontal="16dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_scription"
        android:layout_marginHorizontal="16dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_description"
            android:minLines="4"
            android:maxLines="6"
            android:lines="5"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/price"
        >
<!--        Giới hạn chữ số bằng maxLenght, nếu không để thì sẽ lỗi vì số quá lớn-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_price"
            android:inputType="number"
            android:layout_width="match_parent"
            android:maxLength="8"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spn_category"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_marginHorizontal="16dp"
        android:text="@string/add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>