<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/akaya_telivigala"
      android:text="Book Library"
      android:textAlignment="center"
      android:textSize="45sp" />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginHorizontal="10dp"
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    >

  <com.google.android.material.textfield.TextInputEditText
      android:layout_marginHorizontal="10dp"
      android:id="@+id/edt_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword" />
</com.google.android.material.textfield.TextInputLayout>


  <Button
      android:id="@+id/btn_login"
      android:text="@string/login"
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:layout_marginHorizontal="16dp"
      android:layout_height="wrap_content"/>

  <Button
      android:id="@+id/btn_register"
      android:text="@string/register"
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:layout_marginHorizontal="16dp"

      android:layout_height="wrap_content"/>

  </LinearLayout>